Change history for glaciers
================================================================================

DESIGN ISSUES (user interface):
- [159] user-interface design for climate experiments

HIGH PRIORITY:
- add framework that allows tools to delete themselves? (eg, flag crushed by glacier)
- make advancing glaciers delete flags that are on valley floor
- divide ice into separate shapes for above and below the ELA
- morph or move ice textures to show downvalley motion (how to do this? different points in texture have different velocities!)
- visual representation of snowfall
- create framework for specifying drag-&-drop constraints for tools

MEDIUM PRIORITY:
- change cursor to universal "no" symbol when tools are at an illegal drop location
- when a tool is dragged from the toolbox and dropped illegally, snap it back to the toolbox (animated?)
- when a tool is dragged in the world and dropped illegally, snap it back to its location at the start of the drag (animated?)
- make ice thickness tool adjust its caliper to fit the ice thickness
- thermometer can be dropped above ice cross-section
- thermometer displays "?" when advancing glacier overlaps a thermometer, or when in illegal drop location
- tracer flags can be dropped in the ice cross-section or on surface (snaps to top of cross section)
- ice thickness tool can be dropped anywhere its image intersects valley floor or ice cross-section
- ice thickness tool shows "?" when in illegal drop location
- borehole drill can be dropped above the ice cross-section
- drill a borehole each time mouse button is released on borehole drill
- always collect data for time-based graphs, keep "latest" & "historical" data points, compress historical, limit historical size
- add zoom in/out button for time-based graphs; show scrolling "latest" data or complete "historical"
- fake rocks using ice textures
- fake moraine formation using a Hollywood model
- extruded portion of ice jiggles at headwall while it's evolving