@@ -5,9 +5,12 @@ DESIGN ISSUES (user interface):
 - [159] user-interface design for climate experiments
 
 HIGH PRIORITY:
+- tool dragged to trash needs to shrink towards trash can in all cases
+- divide ice into separate shapes for above and below the ELA
+- don't make ice thickness grid visible in glacier model interface?
+- replace Glacier._surfaceAtSteadyStateELA with something cleaner?
 - add framework that allows tools to delete themselves? (eg, flag crushed by glacier)
 - make advancing glaciers delete flags that are on valley floor
-- divide ice into separate shapes for above and below the ELA
 - morph or move ice textures to show downvalley motion (how to do this? different points in texture have different velocities!)
 - visual representation of snowfall
 - create framework for specifying drag-&-drop constraints for tools
@@ -36,10 +39,10 @@ MEDIUM PRIORITY:
 - add Advanced panel
 
 LOW PRIORITY:
+- remove registration points from mountains image
 - creating a tool and dragging it straight to the trash doesn't work because we're in the middle of an event sequence
 - developer controls for ice velocity "look"?
 - add moving debris (if textures are not convincing enough)
-- icons for View checkboxes
 - make mountains image big enough so that all we see is sky when the birds-eye view is made very wide
 - generalize all charts, there's too much duplicated code (ditto in controller that wires control panel to charts)
 - confirm that titles and axes on graphs are as desired
@@ -84,6 +87,11 @@ CLEANUP:
 
 
 DONE:
+5/6/08 - first pass at making tools that are dropped in trash disappear by shrinking them
+5/6/08 - write test program demonstrating use of PActivity to shrink tools that are dropped in trash
+5/6/08 - change size of ice perspective to more closely match valley width in image
+5/6/08 - add geometry for ice surface below ELA
+5/6/08 - fix geometry for ice surface, it was looping through ice thickness samples in wrong upvalley order
 5/1/08 - create preliminary image for "illegal drop location" cursor
 5/1/08 - add textures and nodes for ice surface above and below ELA (no geometry added yet)
 5/1/08 - add textures for ice cross-section and surface
